# DiLang

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE_OVERVIEW.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENCE  README.md  ROADMAP.md  SECURITY.md  TESTING.md  analysis_options.yaml  melos.yaml  pubspec.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
apps/: .gitkeep
benchmarks/: pubspec.yaml
docs/: 01_PRD.md  02_ARCHITECTURE.md  03_RULES.md  04_PHASES.md  05_DESIGN.md  06_MEMORY.md  07_DOMAIN_MODEL.md  08_EVENT_CATALOG.md  09_API_CONTRACTS.md  10_AI_RUNTIME.md  11_PLATFORM_FOUNDATION.md  12_LANGUAGE_SPECIFICATION.md  13_ENGINEERING_GUIDELINES.md  14_RUNTIME_SPECIFICATION.md  15_NATIVE_BRIDGE_SPECIFICATION.md  16_MODEL_REGISTRY_SPECIFICATION.md  17_STORAGE_SPECIFICATION.md  18_DATABASE_SCHEMA.md  19_SYNC_PROTOCOL.md  20_REPOSITORY_CONTRACTS.md  21_LEARNING_ENGINE_SPECIFICATION.md  22_ASSESSMENT_SPECIFICATION.md  23_CURRICULUM_SPECIFICATION.md  24_RECOMMENDATION_ENGINE.md  25_ANALYTICS_SPECIFICATION.md  26_PROGRESSION_MODEL.md  27_CONVERSATION_ENGINE.md  28_DIALOGUE_STATE.md  29_PROMPT_FRAMEWORK.md  30_STRUCTURED_RESPONSE_SCHEMA.md  31_PRONUNCIATION_PIPELINE.md  32_APPLICATION_ARCHITECTURE.md  33_DESIGN_SYSTEM.md  34_NAVIGATION_SPECIFICATION.md  35_ACCESSIBILITY.md  36_RELEASE_ENGINEERING.md  37_OBSERVABILITY.md  38_PERFORMANCE_BENCHMARKS.md  39_DISTRIBUTION_GUIDE.md  40_RELEASE_CHECKLIST.md  (+30 more)
native/sdk/: CMakeLists.txt
native/sdk/include/: dilang_native_sdk.h
native/sdk/src/: dilang_native_sdk.cpp
(+23 files in other folders)
